--- a/Content.htm
+++ b/Content.htm
@@ -64,8 +64,8 @@ snippets,vorlagen,lernen,verstehen,
     <div class="in-inside">
       <ul>
         <h3>Standards </h3>
-        <li><b><a href="https://www.jumi.biz/pages/ISO-27000.htm">ISO/IEC 27000 </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/ISO-2700x.htm">ISO/IEC 2700x </a></b></li>
+        <li><b><a href="https://www.jumi.biz/pages/ISO-27000.htm">Ziele und Sicherheiten </a></b></li>
+        <li><b><a href="https://www.jumi.biz/pages/ISO-2700x.htm">ISO/IEC 2700x-Familie </a></b></li>
         <li><b><a href="https://www.jumi.biz/pages/BSI-200-1.htm">BSI-Standard 200-1 </a></b></li>
         <h3>IT-Grundschutz </h3>
         <li><b><a href="https://www.jumi.biz/pages/Elementare_Gefährdungen.htm">Elementare Gefährdungen </a></b></li>
@@ -79,8 +79,8 @@ snippets,vorlagen,lernen,verstehen,
     </div>
     <div class="in-inside">
       <ul>
-        <h3>Kritische Infrastrukturen </h3>
-        <li><b><a href="https://www.jumi.biz/pages/Kritische_Infrastrukturen.htm">BSI Kritis Gesetze </a></b></li>
+        <h3>BSI Kritis Gesetze </h3>
+        <li><b><a href="https://www.jumi.biz/pages/Kritische_Infrastrukturen.htm">Kritische Infrastrukturen </a></b></li>
         <li><b><a href="https://www.jumi.biz/pages/Kritische_Infrastrukturen.htm">Standards und Anwendungen </a></b></li>
         <li><b><a href="https://www.jumi.biz/pages/Kritische_Infrastrukturen.htm">Angriffspunkte </a></b></li>
         <h3>### </h3>
@@ -202,43 +202,6 @@ snippets,vorlagen,lernen,verstehen,
         <li><b><a href="https://www.jumi.biz/pages/Projektmanagement.htm">Projektmanagement </a></b></li>
         <li><b><a href="https://www.jumi.biz/pages/Qualitaetssicherung.htm">Qualitätsicherung </a></b></li>
         <li><b><a href="https://www.jumi.biz/pages/Marketing.htm">Marketing </a></b></li>
-      </ul>
-    </div>
-  </div>
-</article>
-<article class="content flow">
-<h2 id="bigHL">FFFFFFFF </h2>
-  <div class="inside-content">
-    <div class="in-inside">
-      <ul>
-        <h3>### </h3>
-        <li><b><a href="pages/###">###</a></b></li>
-        <li><b><a href="pages/###">###</a></b></li>
-        <li><b><a href="pages/###">###</a></b></li>
-        <h3>### </h3>
-        <li><b><a href="pages/###">###</a></b></li>
-        <li><b><a href="pages/###">###</a></b></li>
-        <li><b><a href="pages/###">###</a></b></li>
-        <h3>### </h3>
-        <li><b><a href="pages/###">###</a></b></li>
-        <li><b><a href="pages/###">###</a></b></li>
-        <li><b><a href="pages/###">###</a></b></li>
-      </ul>
-    </div>
-    <div class="in-inside">
-      <ul>
-        <h3>### </h3>
-        <li><b><a href="pages/###">###</a></b></li>
-        <li><b><a href="pages/###">###</a></b></li>
-        <li><b><a href="pages/###">###</a></b></li>
-        <h3>### </h3>
-        <li><b><a href="pages/###">###</a></b></li>
-        <li><b><a href="pages/###">###</a></b></li>
-        <li><b><a href="pages/###">###</a></b></li>
-        <h3>### </h3>
-        <li><b><a href="pages/###">###</a></b></li>
-        <li><b><a href="pages/###">###</a></b></li>
-        <li><b><a href="pages/###">###</a></b></li>
       </ul>
     </div>
   </div>
