--- a/mjsecurity/Cheats.htm
+++ b/mjsecurity/Cheats.htm
@@ -132,6 +132,7 @@ body {
 <img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
 </ul></nav></div></header><main>
 <div class="grid-container">
+<h1>Cheatsheets-Vault</h1>
 <article id="area-1" class="content flow">
 <h2>GTA San Andreas (PS2)</h2>
 <dl><dt><b>Godmode</b></dt>
